--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -34,17 +34,15 @@
     &__contact {
       display: inline-block;
       width: 100%;
-      margin: 35px auto 55px;
+      margin: 35px auto 20px;
       &__pack {
         margin: 4px;
         display: inline-block;
         position: relative;
-        // height: 27px;
         width: 100%;
 
         &__icon {
           width: 20px;
-          // height: 17px;
         }
 
         &__text {
@@ -53,7 +51,6 @@
           top: 0;
           width: 80%;
           left: 34.59px;
-          // height: 27px;
         }
       }
     }
@@ -62,7 +59,6 @@
   &__form {
     display: block;
     position: relative;
-    // height: auto;
 
     &__pack {
       &__text {
@@ -70,15 +66,13 @@
         color: $color-primary;
         font-size: 11px;
         font-weight: 700;
-        line-height: 14.98px;
+        line-height: 18px;
         letter-spacing: 3.28px;
       }
 
       input {
-        // background-color: red;
         width: 312px;
-        // height: 40px;
-        margin-bottom: 20px;
+        margin: 30px 0px 35px;
         display: block;
         width: 312px;
         border: none;
@@ -88,7 +82,6 @@
 
     &__terms {
       width: 100%;
-      // height: 144;
       display: inline-block;
       position: relative;
       direction: ltr;
@@ -97,7 +90,7 @@
         appearance: none;
         border: 1px solid #95989a;
         border-radius: 3px;
-        // height: 24px;
+        padding: 12px;
         width: 24px;
         font-size: 34;
         position: relative;
@@ -127,7 +120,7 @@
         position: absolute;
         top: 180px;
         left: 85px;
-        padding: 20px 100px ;
+        padding: 18px 100px ;
         background-color: $color-primary;
         font-family: $font-secondary;
         font-size: 13px;
