--- a/styles/index.scss
+++ b/styles/index.scss
@@ -36,7 +36,7 @@ body {
     color: #fff;
   }
 
-  .logo_Oxygen {
+  @mixin logo_Oxygen {
     width: 206px;
     font-family: $font-primary;
     font-size: 32px;
@@ -55,18 +55,27 @@ body {
 
   footer {
     width: 100%;
-    // // // height: 89px;
     box-shadow: 0px -5px 40px 5px #00000033;
     position: relative;
-    margin: 260px 0px 0px;
-    padding: 45px auto 50px;
+    margin: 250px 0px 0px;
+    padding: 10px 0 10px;
 
     .pack {
       display: block;
       width: 90%;
+      &__oxygen {
+        @include logo_Oxygen;
+        font-size: 26px;
+        font-weight: 300;
+        line-height: 30px;
+        text-align: left;    
+        margin: 0px  17px 0px;
+        padding: 10px 7px 0px;    
+      }
+
       &__copyright {
         width: 187px;
-        // height: 15px;
+        padding: 0px 0px 10px;
         font-family: $font-secondary;
         font-size: 11px;
         font-weight: 400;
