--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,27 @@
 nav {
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2);
+  display: inline-block;
+  width: 375px;
+  position: relative;
+}
+nav .logo_Oxygen {
+  font-family: "Raleway", sans-serif;
+  font-size: 32px;
+  font-weight: 300;
+  line-height: 37px;
+  color: #08a6e4;
+  margin: 0px 0px 0px;
+  padding: 18px 0px 18px 25px;
+  text-align: left;
 }
 nav .menu {
+  position: absolute;
+  top: 30px;
+  left: 330px;
   width: 20px;
-  display: inline-block;
-  margin-bottom: 5px;
-  margin-left: 95px;
 }
-nav .rectangle-menu {
+nav .menu__rectangle {
+  position: absolute;
   width: 20px;
   display: block;
   margin-bottom: 3px;
@@ -649,15 +663,7 @@ body footer .pack {
   width: 90%;
 }
 body footer .pack__oxygen {
-  width: 206px;
-  font-family: "Raleway", sans-serif;
-  font-size: 32px;
-  font-weight: 300;
-  line-height: 37px;
   color: #08a6e4;
-  display: inline-block;
-  margin: 17px auto 17px 25px;
-  padding: 30px auto;
   font-size: 26px;
   font-weight: 300;
   line-height: 30px;
