--- a/styles/index.scss
+++ b/styles/index.scss
@@ -82,11 +82,14 @@ body {
   }
 }
 
-// @media (min-width: 1000px) {
-//   body {
-//     background-color: greenyellow;
-//     max-width: 1626px;
-
-//     width: 1626px;
-//   }
-// }
+@media (min-width: 1000px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
+  }
+}
