desktop header done

--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,10 +1,12 @@
+@import "./mixin";
+
 nav {
   box-shadow: 0px 3px 6px 0px $color-shadow;
   display: inline-block;
   width: 375px;
   position: relative;
 
-  .limit__logo {
+  .logo {
     font-family: $font-primary;
     font-size: 32px;
     font-weight: 300;
@@ -38,22 +40,13 @@ nav {
   nav {
     width: 100%;
     display: flex;
-    margin: 0 auto;
-    padding: 0 20px;
-    align-content: center;
-    align-items: center;
 
-    @mixin limit {
-      max-width: 1626px;
-      width: 1626px;
-      background-color: red;
-      display: flex;
-      justify-items: center;
-      align-items: center;
-      margin: 0 auto;
+    .nav_footer__limit{
+      @include limit;
+      flex-direction: row;
 
-      &__logo {
-        padding-left: 150px;
+      .logo {
+        padding-left: 125px;
       }
 
       .menu {
@@ -63,26 +56,23 @@ nav {
       ul {
         display: flex;
         list-style: none;
-        margin-right: 100px;
+        margin-left: 492px;
 
         li {
-          width: 70px;
+          width: 80px;
           flex-direction: row;
-          left: 1101px;
           font-family: $font-secondary;
           font-size: 11px;
           font-weight: 700;
           line-height: 15px;
           letter-spacing: 3.2799999713897705px;
-          text-align: center;
-          margin-left: 110px;
-          padding: 20px 0px;
+          margin-left: 90px;
+          padding: 27px 0px;
           border-bottom: 3px solid transparent;
         }
 
         li:hover{
-        border-bottom: 3px solid $color-primary;
-        
+          border-bottom: 3px solid $color-primary;
         }
       }
     }
