--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -13,7 +13,7 @@ header {
   }
 
   p {
-    width: 308px;
+    width: 285px;
     font-family: $font-secondary;
     font-size: 16px;
     font-weight: 400;
@@ -47,6 +47,45 @@ header {
 }
 
 @media (min-width: 1000px) {
-  &__limit {
+  header {
+    width: 100%;
+    background-color: aqua;
+
+    h1 {
+      width: 242px;
+      font-size: 49px;
+      font-weight: 400;
+      line-height: 57px;
+      text-align: center;
+    }
+
+    p {
+      width: 400px;
+      font-family: Open Sans;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 22px;
+    }
+
+    button {
+      line-height: 22px;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 700;
+      margin: 23px auto 0px;
+      padding: 22px 155px;
+    }
+
+    .header__container {
+      width: 100%;
+
+      &__img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+        margin: 0px auto;
+      }
+    }
   }
 }
