--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -1,47 +1,10 @@
+@import './mixin';
+
 .section2 {
   display: block;
   text-align: center;
   background-color: #f7f7f7;
   padding: 25px 0 230px;
-
-  @mixin __card {
-    margin: 19px auto 18px;
-    width: 315px;
-    border-radius: 5px;
-    display: inline-block;
-    background-color: #fff;
-  }
-
-  @mixin containerImg {
-    margin: 0 auto;
-    position: relative;
-  }
-
-  @mixin containerText {
-    padding-top: 170px;
-    display: block;
-
-    p {
-      width: 90%;
-    }
-  }
-
-  @mixin title {
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 35.22px;
-    text-align: left;
-    font-family: $font-primary;
-    width: 90%;
-  }
-
-  @mixin text {
-    font-family: $font-secondary;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 21px;
-    text-align: left;
-  }
 
   &__card1 {
     @include __card;
