--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@ nav {
   width: 375px;
   position: relative;
 }
-nav .limit__logo {
+nav .logo {
   font-family: "Raleway", sans-serif;
   font-size: 32px;
   font-weight: 300;
@@ -34,46 +34,42 @@ nav ul {
   nav {
     width: 100%;
     display: flex;
-    margin: 0 auto;
-    padding: 0 20px;
-    align-content: center;
-    align-items: center;
   }
-  nav .limit {
+  nav .nav_footer__limit {
     max-width: 1626px;
     width: 1626px;
     background-color: red;
     display: flex;
+    flex-direction: column;
     justify-items: center;
     align-items: center;
     margin: 0 auto;
+    flex-direction: row;
   }
-  nav .limit__logo {
-    padding-left: 150px;
+  nav .nav_footer__limit .logo {
+    padding-left: 125px;
   }
-  nav .limit .menu {
+  nav .nav_footer__limit .menu {
     display: none;
   }
-  nav .limit ul {
+  nav .nav_footer__limit ul {
     display: flex;
     list-style: none;
-    margin-right: 100px;
+    margin-left: 492px;
   }
-  nav .limit ul li {
-    width: 70px;
+  nav .nav_footer__limit ul li {
+    width: 80px;
     flex-direction: row;
-    left: 1101px;
     font-family: "Open Sans", sans-serif;
     font-size: 11px;
     font-weight: 700;
     line-height: 15px;
     letter-spacing: 3.2799999714px;
-    text-align: center;
-    margin-left: 110px;
-    padding: 20px 0px;
+    margin-left: 90px;
+    padding: 27px 0px;
     border-bottom: 3px solid transparent;
   }
-  nav .limit ul li:hover {
+  nav .nav_footer__limit ul li:hover {
     border-bottom: 3px solid #08a6e4;
   }
 }
@@ -91,7 +87,7 @@ header h1 {
   margin: 105px auto 22px auto;
 }
 header p {
-  width: 308px;
+  width: 285px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -120,97 +116,139 @@ header .header__container__img {
   margin: 0px auto;
 }
 
+@media (min-width: 1000px) {
+  header {
+    width: 100%;
+    background-color: aqua;
+  }
+  header h1 {
+    width: 242px;
+    font-size: 49px;
+    font-weight: 400;
+    line-height: 57px;
+    text-align: center;
+  }
+  header p {
+    width: 400px;
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+  }
+  header button {
+    line-height: 22px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 23px auto 0px;
+    padding: 22px 155px;
+  }
+  header .header__container {
+    width: 100%;
+  }
+  header .header__container__img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    margin: 0px auto;
+  }
+}
 .section1 {
-  display: inline-block;
+  display: block;
   padding-bottom: 50px;
 }
 .section1 h3 {
-  font-family: "Raleway", sans-serif;
+  width: 295px;
   font-size: 30px;
   font-weight: 300;
   line-height: 35px;
-  margin-bottom: 26px;
+  margin: 0px auto 26px;
 }
-.section1__card {
+.section1__containerCard {
+  display: inline-block;
+  margin: 0 10px;
+}
+.section1__containerCard__card {
   display: block;
-  width: 370px;
+  width: 360px;
   padding: 10px 0px 0px;
   margin: 10px auto 10px;
 }
-.section1__card__container {
+.section1__containerCard__card__container {
   margin: 0 auto;
   width: 63px;
   position: relative;
 }
-.section1__card__container__circle {
+.section1__containerCard__card__container__circle {
   display: inline-block;
   position: relative;
   border-radius: 50%;
   width: auto;
   width: 63px;
 }
-.section1__card__container__vectors {
+.section1__containerCard__card__container__vectors {
   position: absolute;
   width: 44.02px;
   top: 0px;
 }
-.section1__card__container__vectors__head {
+.section1__containerCard__card__container__vectors__head {
   position: absolute;
   left: 19px;
   padding-left: 20px;
 }
-.section1__card__container__vectors__body {
+.section1__containerCard__card__container__vectors__body {
   position: absolute;
   padding-left: 21px;
   top: 27px;
   left: 8px;
 }
-.section1__card__container__vectors__eye1 {
+.section1__containerCard__card__container__vectors__eye1 {
   position: absolute;
   top: 11px;
   left: 21px;
 }
-.section1__card__container__vectors__eye2 {
+.section1__containerCard__card__container__vectors__eye2 {
   position: absolute;
   top: 17px;
   left: 43px;
   width: 25px;
 }
-.section1__card__container__vectors__eye3 {
+.section1__containerCard__card__container__vectors__eye3 {
   position: absolute;
   width: 14px;
   top: 22.64px;
   left: 48px;
 }
-.section1__card__container__vectors__box1 {
+.section1__containerCard__card__container__vectors__box1 {
   position: absolute;
   left: 32px;
   width: 37px;
   top: 4px;
 }
-.section1__card__container__vectors__box2 {
+.section1__containerCard__card__container__vectors__box2 {
   position: absolute;
   top: 8px;
   left: 29px;
   width: 43.15px;
 }
-.section1__card__container__vectors__box3 {
+.section1__containerCard__card__container__vectors__box3 {
   position: absolute;
   top: 10px;
   left: 26px;
   width: 48.17px;
 }
-.section1__card__container__vectors__box4 {
+.section1__containerCard__card__container__vectors__box4 {
   top: 14px;
   left: 25px;
   width: 52px;
   position: absolute;
 }
-.section1__card p {
+.section1__containerCard__card p {
   margin: 0px auto;
   font-family: "Raleway", sans-serif;
 }
-.section1__card__title {
+.section1__containerCard__card__title {
   text-align: center;
   font-size: 20px;
   font-weight: 1000;
@@ -219,7 +257,7 @@ header .header__container__img {
   color: black;
   padding: 8px 0 22px;
 }
-.section1__card__text {
+.section1__containerCard__card__text {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -682,7 +720,6 @@ body h1,
 body h2,
 body h3 {
   font-family: "Raleway", sans-serif;
-  width: 100%;
   text-align: center;
 }
 body button {
@@ -737,11 +774,16 @@ body footer .pack__logos {
 
 @media (min-width: 1000px) {
   body {
+    width: 100%;
+  }
+  body .body__limit {
+    max-width: 1626px;
+    width: 1626px;
+    background-color: red;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
-    justify-content: center;
+    justify-items: center;
     align-items: center;
-    width: 100%;
+    margin: 0 auto;
   }
 }
