--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./mixin";
 @import "./nav.scss";
 @import "./header.scss";
 @import "./section1.scss";
@@ -22,7 +23,6 @@ body {
   h2,
   h3 {
     font-family: $font-primary;
-    width: 100%;
     text-align: center;
   }
 
@@ -84,12 +84,16 @@ body {
 
 @media (min-width: 1000px) {
   body {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // margin: 0 auto;
+    // justify-content: center;
+    // align-items: center;
     width: 100%;
     
+    .body__limit{
+      @include limit;
+      
+    }
   }
 }
