desktop section1 done

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -3,7 +3,7 @@
 @mixin limit {
   max-width: 1626px;
   width: 1626px;
-  background-color: red;
+  // background-color: red;   
   display: flex;
   flex-direction: column;
   justify-items: center;
