--- a/styles/index.css
+++ b/styles/index.css
@@ -34,19 +34,22 @@ nav ul {
   nav {
     width: 100%;
     display: flex;
+    margin: 0 auto;
   }
   nav .nav_footer__limit {
-    max-width: 1626px;
-    width: 1626px;
+    background-color: red;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-items: center;
     align-items: center;
     margin: 0 auto;
+    width: 1626px;
+    min-width: 1000px;
     flex-direction: row;
+    justify-content: space-between;
   }
   nav .nav_footer__limit .logo {
-    padding-left: 125px;
+    margin-left: 127px;
   }
   nav .nav_footer__limit .menu {
     display: none;
@@ -54,9 +57,13 @@ nav ul {
   nav .nav_footer__limit ul {
     display: flex;
     list-style: none;
-    margin-left: 492px;
+    min-width: 350px;
+    width: 600px;
+    margin-right: 65px;
+    justify-content: space-between;
   }
   nav .nav_footer__limit ul li {
+    color: #a5a5a5;
     width: 80px;
     flex-direction: row;
     font-family: "Open Sans", sans-serif;
@@ -64,11 +71,12 @@ nav ul {
     font-weight: 700;
     line-height: 15px;
     letter-spacing: 3.2799999714px;
-    margin-left: 90px;
+    text-align: center;
     padding: 27px 0px;
     border-bottom: 3px solid transparent;
   }
   nav .nav_footer__limit ul li:hover {
+    color: black;
     border-bottom: 3px solid #08a6e4;
   }
 }
@@ -787,11 +795,6 @@ body footer .pack__logos {
 
 @media (min-width: 1000px) {
   body {
-    width: 100%;
-  }
-  body .body__limit {
-    max-width: 1626px;
-    width: 1626px;
     display: flex;
     flex-direction: column;
     justify-items: center;
