--- a/styles/index.css
+++ b/styles/index.css
@@ -36,10 +36,8 @@ nav ul {
     display: flex;
     margin: 0 auto;
   }
-  nav .nav_footer__limit {
-    background-color: red;
+  nav .limit {
     display: flex;
-    flex-direction: row;
     justify-items: center;
     align-items: center;
     margin: 0 auto;
@@ -48,13 +46,13 @@ nav ul {
     flex-direction: row;
     justify-content: space-between;
   }
-  nav .nav_footer__limit .logo {
+  nav .limit .logo {
     margin-left: 127px;
   }
-  nav .nav_footer__limit .menu {
+  nav .limit .menu {
     display: none;
   }
-  nav .nav_footer__limit ul {
+  nav .limit ul {
     display: flex;
     list-style: none;
     min-width: 350px;
@@ -62,7 +60,7 @@ nav ul {
     margin-right: 65px;
     justify-content: space-between;
   }
-  nav .nav_footer__limit ul li {
+  nav .limit ul li {
     color: #a5a5a5;
     width: 80px;
     flex-direction: row;
@@ -75,7 +73,7 @@ nav ul {
     padding: 27px 0px;
     border-bottom: 3px solid transparent;
   }
-  nav .nav_footer__limit ul li:hover {
+  nav .limit ul li:hover {
     color: black;
     border-bottom: 3px solid #08a6e4;
   }
@@ -282,7 +280,6 @@ header .header__container__img {
   }
   .section1 h3 {
     width: 100%;
-    font-family: Raleway;
     font-size: 36px;
     font-weight: 400;
     line-height: 42px;
@@ -311,6 +308,7 @@ header .header__container__img {
 .section2__card1__containerImg1 {
   margin: 0 auto;
   position: relative;
+  background-color: #fff;
 }
 .section2__card1__containerImg1__rectangleMobile {
   position: absolute;
@@ -331,6 +329,9 @@ header .header__container__img {
   width: 131.88px;
   top: 17px;
   left: 90px;
+}
+.section2__card1__containerImg1__circleBluePc {
+  display: none;
 }
 .section2__card1__containerImg1__mobile {
   position: absolute;
@@ -396,6 +397,7 @@ header .header__container__img {
   padding-top: 25px;
   background-color: #fff;
   border: 1px solid #e8e9ed;
+  border-radius: 3px;
 }
 .section2__card2__containerText2 p {
   width: 90%;
@@ -445,6 +447,151 @@ header .header__container__img {
   margin: 0px;
 }
 
+@media (min-width: 1000px) {
+  .section2 {
+    width: 100%;
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .section2__limit {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 1626px;
+    min-width: 1000px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 90px 0px;
+  }
+  .section2 .section2__card1 {
+    display: flex;
+    width: 1124px;
+    height: 370px;
+    flex-direction: row-reverse;
+    background-color: #fff;
+  }
+  .section2 .section2__card1__containerImg1 {
+    display: block;
+    position: relative;
+    width: 40%;
+  }
+  .section2 .section2__card1__containerImg1__rectangleMobile {
+    display: none;
+  }
+  .section2 .section2__card1__containerImg1__rectanglePc {
+    display: block;
+    position: absolute;
+    width: 40%;
+    top: 60px;
+    left: 250px;
+  }
+  .section2 .section2__card1__containerImg1__pc {
+    flex: 1;
+    position: absolute;
+    width: 70%;
+    top: 115px;
+    left: 55.27px;
+  }
+  .section2 .section2__card1__containerImg1__circleBlue {
+    display: none;
+  }
+  .section2 .section2__card1__containerImg1__circleBluePc {
+    position: absolute;
+    width: 70%;
+    top: 10px;
+    left: 20px;
+  }
+  .section2 .section2__card1__containerImg1__mobile {
+    z-index: 1;
+    position: absolute;
+    width: 93%;
+    top: 25px;
+    left: 5%;
+  }
+  .section2 .section2__card1__containerText1 {
+    width: 45%;
+    padding: 8% 1.5%;
+  }
+  .section2 .section2__card1__containerText1__title {
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 42px;
+  }
+  .section2 .section2__card1__containerText1__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+  }
+  .section2 .section2__card1__containerText1__linePink {
+    background-color: #eb476e;
+    height: 4px;
+    width: 70%;
+    margin: 10% 5% 0px;
+  }
+  .section2 .section2__card1__containerText1__lineBlue {
+    background-color: #08a6e4;
+    height: 4px;
+    width: 70%;
+    margin: 10% 5% 0px;
+  }
+  .section2 .section2__card2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: transparent;
+    width: 1124px;
+    height: 370px;
+  }
+  .section2 .section2__card2__containerText2 {
+    width: 623px;
+    height: 370px;
+    padding: 8% 1.5%;
+  }
+  .section2 .section2__card2__containerText2__title {
+    margin: 0 20px;
+    width: 70%;
+    text-align: left;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 42px;
+  }
+  .section2 .section2__card2__containerText2__text {
+    width: 75%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+  }
+  .section2 .section2__card2__containerText2__lineGreen {
+    background-color: #55dfb4;
+    height: 4px;
+    width: 56%;
+    margin: 10% 4% 0px;
+  }
+  .section2 .section2__card2__containerImg2 {
+    width: 440px;
+    height: 370px;
+    margin-left: 100px;
+    position: relative;
+  }
+  .section2 .section2__card2__containerImg2__backgroundGreen {
+    display: absolute;
+    padding: 0px;
+    top: 0px;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
+  .section2 .section2__card2__containerImg2__megaphone {
+    position: absolute;
+    left: 10%;
+    top: 100px;
+    z-index: 2;
+  }
+}
 .section3 {
   display: inline-block;
   text-align: center;
@@ -804,7 +951,6 @@ body footer .pack__logos {
     display: flex;
     flex-direction: column;
     justify-items: center;
-    align-items: center;
     margin: 0 auto;
   }
 }
