--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -40,8 +40,8 @@ nav {
       flex-direction: row;
       justify-content: space-between;
 
-      .logo {
-        margin-left: 127px;
+      .logoNav {
+        margin-left:85px;
       }
 
       .menu {
