--- a/styles/index.scss
+++ b/styles/index.scss
@@ -114,7 +114,7 @@ body {
 
           &__logoFooter {
             @include logo;
-            padding: 5px 0;
+            padding: 0px 15px;
             font-size: 26px;
             font-weight: 300;
             line-height: 30px;
@@ -127,6 +127,7 @@ body {
             font-weight: 400;
             line-height: 14.98px;
             text-align: left;
+          
           }
         }
 
@@ -134,6 +135,7 @@ body {
           display: flex;
           top: 0;
           left: -100px;
+
           position: relative;
           width: 75px;
           justify-content: space-around;
