--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -120,12 +120,85 @@
         position: absolute;
         top: 180px;
         left: 85px;
-        padding: 18px 100px ;
+        padding: 18px 100px;
         background-color: $color-primary;
         font-family: $font-secondary;
         font-size: 13px;
         font-weight: 700;
         line-height: 17.7px;
+      }
+    }
+  }
+}
+
+@media (min-width: 1000px) {
+  .section4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+
+    .container4 {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 1626px;
+      padding-left: 20px;
+    }
+    &__header {
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+      margin: 0 0px;
+      padding: 0px 0px 50px 30px;
+
+      h1 {
+        width: 100%;
+        font-size: 49px;
+        font-weight: 400;
+        line-height: 57.53px;
+        text-align: left;
+        padding-bottom: 30px;
+      }
+
+      &__contact {
+        width: 100%;
+        &__pack {
+          display: flex;
+          flex-wrap: wrap;
+          &__icon {
+          }
+          &__text {
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 22px;
+            text-align: left;
+          }
+        }
+      }
+    }
+
+    &__form {
+      display: flex;
+      flex-direction: column;
+      width: 31%;
+      height: 450px;
+      padding: 75px 0 0px 15px;
+
+      &__pack {
+        input {
+          width: 96%;
+        }
+      }
+
+      &__terms {
+        width: 98%;
+      }
+
+      button {
+        top: 130px;
+        left: 220px;
       }
     }
   }
